update featured publication

--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,24 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@Article{Venk21,
+  author          = {Venkadesh, Kiran Vaidhya and Setio, Arnaud A. A. and Schreuder, Anton and Scholten, Ernst T. and Chung, Kaman and W Wille, Mathilde M. and Saghir, Zaigham and van Ginneken, Bram and Prokop, Mathias and Jacobs, Colin},
+  date            = {2021-08},
+  journal         = {Radiology},
+  title           = {Deep Learning for Malignancy Risk Estimation of Pulmonary Nodules Detected at Low-Dose Screening {CT}.},
+  doi             = {10.1148/radiol.2021204433},
+  issn            = {1527-1315},
+  issue           = {2},
+  pages           = {438--447},
+  pubstate        = {ppublish},
+  volume          = {300},
+  abstract        = {Background Accurate estimation of the malignancy risk of pulmonary nodules at chest CT is crucial for optimizing management in lung cancer screening. Purpose To develop and validate a deep learning (DL) algorithm for malignancy risk estimation of pulmonary nodules detected at screening CT. Materials and Methods In this retrospective study, the DL algorithm was developed with 16 077 nodules (1249 malignant) collected -between 2002 and 2004 from the National Lung Screening Trial. External validation was performed in the following three -cohorts -collected between 2004 and 2010 from the Danish Lung Cancer Screening Trial: a full cohort containing all 883 nodules (65 -malignant) and two cancer-enriched cohorts with size matching (175 nodules, 59 malignant) and without size matching (177 -nodules, 59 malignant) of benign nodules selected at random. Algorithm performance was measured by using the area under the receiver operating characteristic curve (AUC) and compared with that of the Pan-Canadian Early Detection of Lung Cancer (PanCan) model in the full cohort and a group of 11 clinicians composed of four thoracic radiologists, five radiology residents, and two pulmonologists in the cancer-enriched cohorts. Results The DL algorithm significantly outperformed the PanCan model in the full cohort (AUC, 0.93 [95% CI: 0.89, 0.96] vs 0.90 [95% CI: 0.86, 0.93];   = .046). The algorithm performed comparably to thoracic radiologists in cancer-enriched cohorts with both random benign nodules (AUC, 0.96 [95% CI: 0.93, 0.99] vs 0.90 [95% CI: 0.81, 0.98];   = .11) and size-matched benign nodules (AUC, 0.86 [95% CI: 0.80, 0.91] vs 0.82 [95% CI: 0.74, 0.89];   = .26). Conclusion The deep learning algorithm showed excellent performance, comparable to thoracic radiologists, for malignancy risk estimation of pulmonary nodules detected at screening CT. This algorithm has the potential to provide reliable and reproducible malignancy risk scores for clinicians, which may help optimize management in lung cancer screening. © RSNA, 2021   See also the editorial by Tammemägi in this issue.},
+  algorithm       = {https://grand-challenge.org/algorithms/pulmonary-nodule-malignancy-prediction/},
+  citation-subset = {AIM, IM},
+  country         = {United States},
+  issn-linking    = {0033-8419},
+  nlm-id          = {0401260},
+  optnote         = {DIAG, RADIOLOGY},
+  owner           = {NLM},
+  pmid            = {34003056},
+  pubmodel        = {Print-Electronic},
+  revised         = {2021-07-27},
+  year            = {2021},
 }
